--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.2",
     "primeicons": "^6.0.1",
     "primereact": "^9.2.1",
@@ -19,6 +20,7 @@
     "recharts": "^2.1.15",
     "redux": "^4.2.1",
     "sass": "^1.55.0",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
