--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "filepond": "^4.30.4",
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.11",
+    "firebase": "^9.22.2",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^3.8.0",
     "primeicons": "^6.0.1",
